[gd_scene format=3 uid="uid://b2br5h5krl37t"]

[ext_resource type="Theme" uid="uid://cmipx0ggmbqqw" path="res://themes/aoc.tres" id="1_h8ep5"]
[ext_resource type="Script" uid="uid://chjc8gv8r3ab0" path="res://scripts/day_07.gd" id="1_ta18k"]

[node name="Day07" type="Control" unique_id=1532770416]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h8ep5")
script = ExtResource("1_ta18k")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1774468692]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=436635092]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1564971617]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Header" unique_id=202269305]
layout_mode = 2
size_flags_horizontal = 3
text = "Day 01"

[node name="ExampleRunButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=918593263]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Example"

[node name="InputRunButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=1049233983]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Input"

[node name="Main" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=1659500429]
layout_mode = 2
size_flags_horizontal = 3
text = "Main"

[node name="Assignment" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1311610925]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Assignment" unique_id=1954836896]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExPart1" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2075057860]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 1 (Oroneth)"

[node name="ExAnswer1" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=135110103]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="ExPart2" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2008343836]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 2 (23)"

[node name="ExAnswer2" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=34318060]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="ExPart3" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1387620474]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 3 (1154)"

[node name="ExAnswer3" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2135792656]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part1" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1514682794]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 1"

[node name="Answer1" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=502482628]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part2" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1686770541]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 2"

[node name="Answer2" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1247219565]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part3" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1874643477]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 3"

[node name="Answer3" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2104192447]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Example" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Assignment" unique_id=976486270]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=410026942]
layout_mode = 2
text = "Example Input"

[node name="ExampleTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=1580868933]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExampleTextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=574414597]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExampleTextEdit3" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=1370760715]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/ExampleRunButton" to="." method="_on_example_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/InputRunButton" to="." method="_on_input_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/Main" to="." method="_on_main_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit" to="." method="_on_example_text_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit2" to="." method="_on_example_text_edit_text_changed2"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit3" to="." method="_on_example_text_edit_3_text_changed"]
